--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <h1>Odinh</h1>
         <p>website currently under development.</p>
     </header>
+    <p class="geoff">geoff you're an ass!</p>
 
 
 </body>
