added information about past work

--- a/index.html
+++ b/index.html
@@ -27,13 +27,31 @@
         <p>creative by <span class="accent-d">choice.</span></p>
     </header>
     <section>
-        <p>
-            Hello, I am Odinn a <span class="age"></span> year old graphics designer from <span title="Holland?">the
-                Netherlands.</span><br />
-            Pop culture, movies and comic books are my inspiration for a lot of my works. <br />
-            <br />
-            I like to tinker and puzzle with <span class="accent">JavaScript</span> to create interactive idea's and unique experiences for clients, friends and pet projects!
-        </p>
+        <img class="profile" src="assets/img/profile.jpg" alt="">
+        <div class="paragraphs">
+            <h3>Who I am.</h3>
+            <p>
+                Hello, I am Odinn a <span class="age"></span> year old graphics designer from <span title="Holland?">the
+                    Netherlands.</span><br />
+                Pop culture, movies and comic books are my inspiration for a lot of my works. <br />
+            </p>
+            <p>
+                I like to tinker and puzzle with <span class="accent">digital designs</span> to create interactive
+                idea's and
+                unique
+                experiences for clients, friends and pet projects!
+            </p>
+            <p>
+                Notably i've worked on a complete rebranding of a clothing store <a
+                    href="https://www.go-britain.nl/">Go&nbsp;Britain</a>, due to the 2020 pandemic which we could not
+                deploy.
+            </p>
+            <p>
+                During my co-op at <a href="https://www.laliquemuseum.nl/">Musee Lalique Netherlands</a> we've developed
+                a catalogue/story documentation for a
+                collection of works made by the famous glasswork artist Réne Lalique
+            </p>
+        </div>
     </section>
 
     <script>
