updated projects page

--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,11 @@
                     <li><a href="/projects.html">projects.</a></li>
                     <!-- <li><a href="/portfolio.html">portfolio.</a></li> -->
                     <li><a href="https://instagram.com/_odinh" target="_blank">instagram.</a></li>
+                    <li><a href="https://github.com/odinnh" target="_blank">Github.</a></li>
                 </ul>
             </nav>
+            <h3>Projects.</h3>
+            <p>These are my most recent projects, more will be added when they are ready. view my ongoing struggles on <a href="https://github.com/Miss-placed/DECLASSIFIED">github</a>.</p>
             <span class="shaded">
                 <h3><a href="http://declassified.netlify.app" target="_blank">Interactive map COD</a></h3>
                 <img src="https://i.imgur.com/6Wju1GT.png"/>
