--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li><a href="/projects.html">projects.</a></li>
                     <!-- <li><a href="/portfolio.html">portfolio.</a></li> -->
                     <li><a href="https://instagram.com/_odinh" target="_blank">instagram.</a></li>
+                    <li><a href="https://github.com/odinnh" target="_blank">Github.</a></li>
                 </ul>
             </nav>
             <h3>Who I am.</h3>
