--- a/projects/gob.html
+++ b/projects/gob.html
@@ -34,6 +34,7 @@
                     <li><a href="/projects.html">projects.</a></li>
                     <!-- <li><a href="/portfolio.html">portfolio.</a></li> -->
                     <li><a href="https://instagram.com/_odinh" target="_blank">instagram.</a></li>
+                    <li><a href="https://github.com/odinnh" target="_blank">Github.</a></li>
                 </ul>
             </nav>
             <h3>Go-Britain Website</h3>
