fixed spelling errors
cleaned up the website ty ben

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <nav class="small-nav">
             <ul>
-                <li><a href="/index.html">who am i.</a></li>
+                <li><a href="/index.html" class="curr">who I am.</a></li>
                 <li><a href="/projects.html">projects.</a></li>
                 <li><a href="https://instagram.com/_odinh" target="_blank">instagram.</a></li>
                 <li><a href="https://github.com/odinnh" target="_blank">Github.</a></li>
@@ -38,7 +38,7 @@ Pop culture, movies and comic books are my inspiration for a lot of my works.
 
 I like to tinker and puzzle with <span class="accent">digital designs</span> to create interactive idea's and unique experiences for clients, friends and pet projects!
 
-Notably i've worked on a complete rebranding of a clothing store <a href="https://www.go-britain.nl/">Go&nbsp;Britain</a>, due to the 2020 pandemic which we could not deploy.
+Notably i've worked on a complete rebranding of a clothing store <a href="https://www.go-britain.nl/">Go&nbsp;Britain</a>. however, due to the 2020 pandemic we were unable to deploy the project.
 
 
 During my co-op at <a href="https://www.laliquemuseum.nl/">Musee Lalique Netherlands</a> we've developed a catalogue/story documentation for a collection of works made by the famous glasswork artist Réne Lalique
