--- a/index.html
+++ b/index.html
@@ -56,20 +56,21 @@ The rebranding entailed, in-store User Experience Design, website restyling, sto
 
 During my co-op at <a href="https://www.laliquemuseum.nl/" target="_blank">Musee Lalique Netherlands</a> we've developed a catalogue/story documentation for a collection of works made by the famous glasswork artist Réne Lalique
 </div></div></div></pre>
-    </section>
-    <section class="output">
-      <h2>Skills.</h2>
-      <div class="pills">
-        <div>Vue 3</div>
-        <div>Gutenberg Blocks</div>
-        <div>Gutenberg Block themes</div>
-        <div>Adobe Suite</div>
-        <div>Google Firestore</div>
-        <div>Product Photography</div>
-        <div>Javascript</div>
-        <div>Css</div>
-        <div>Html5</div>
-        <div>Html5</div>
+
+      <div class="output">
+        <h2>Skills.</h2>
+        <div class="pills">
+          <div>Vue 3</div>
+          <div>Gutenberg Blocks</div>
+          <div>Gutenberg Block themes</div>
+          <div>Adobe Suite</div>
+          <div>Google Firestore</div>
+          <div>Product Photography</div>
+          <div>Javascript</div>
+          <div>Css</div>
+          <div>Html5</div>
+          <div>Html5</div>
+        </div>
       </div>
     </section>
 
